syntax = "proto3";
package sixprotocol.nftmngr;

import "sixprotocol/nftmngr/on_chain_data.proto";
import "sixprotocol/nftmngr/origin_data.proto";

option go_package = "github.com/thesixnetwork/six-protocol/x/nftmngr/types";

message NFTSchema {
  string code = 1;
  string name = 2;
  string owner = 3;
  string description = 4;
  OriginData origin_data = 5;
  OnChainData onchain_data = 6;
  bool isVerified = 7;
  string mint_authorization = 8;
}

message NFTSchemaINPUT {
  string code = 1;
  string name = 2;
  string owner = 3;
  string description = 4;
  repeated string system_actioners = 5;
  OriginData origin_data = 6;
  OnChainData onchain_data = 7;
  bool isVerified = 8;
  string mint_authorization = 9;
}

message NFTSchemaQueryResult {
  string code = 1;
  string name = 2;
  string owner = 3;
  string description = 4;
  OriginData origin_data = 5;
  OnChainDataResult onchain_data = 6;
  bool isVerified = 7;
  string mint_authorization = 8;
}